...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/brand_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
...

                    <EditText
                        android:id="@+id/brand"
                        android:layout_width="match_parent"
                        android:hint="@string/enter_device_name"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/model_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
...

                    <EditText
                        android:id="@+id/model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/store_name_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
...

                    <EditText
                        android:id="@+id/store_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
...

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/img_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                            <androidx.appcompat.widget.AppCompatImageButton
                                android:id="@+id/device_img"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
...

                            <androidx.appcompat.widget.AppCompatImageButton
                                android:id="@+id/device_img1"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
...

                            <androidx.appcompat.widget.AppCompatImageButton
                                android:id="@+id/device_img2"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
...

                            <androidx.appcompat.widget.AppCompatImageButton
                                android:id="@+id/device_img3"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
...

                            <androidx.appcompat.widget.AppCompatImageButton
                                android:id="@+id/device_img4"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
...

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
