...
    <string name="ok">OK</string>
    <string name="scan_result">Scan Result</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="authenticating">Authenticating</string>
    <string name="email_invalid">Invalid email!</string>
    <string name="can_not_empty">Can\'t be empty!</string>
    <string name="select_image">Select Images</string>
    <string name="cancel">Cancel</string>
    <string name="enter_device_name">Mobile Phone Brand</string>
    <string name="enter_device_model">Model Name</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
...
terms of use and privacy policy?
         &lt;/body&gt;
        &lt;/html&gt;
        </string>
    <string name="instructions">Instructions</string>
    <string name="session_expired">Session Expired!</string>
    <string name="session_expired_detail">Your session has expired. Please login again to continue using DCP.</string>
    <string name="type_imei">Type IMEI</string>
    <string name="scan_imei">Scan IMEI</string>
    <string name="password_should_be_min_six">Must be at least minimum 6 characters</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="verifying">Verifying</string>
    <string name="reset_email_sent">A reset email has been sent! Please check your email.</string>
    <string name="please_enter_password_to_reset">Please enter your email address to reset your password</string>
    <string name="no_records_found">No records found!</string>
    <string name="report_device">Report Mobile Phone</string>
    <string name="reported">Reported</string>
    <string name="device_notfound_details"> not found in database. This device may be a counterfeit or illegal. Please report this device through DCP!\n\n To fill the form press Report Mobile Phone.</string>
    <string name="device_images">Device Images</string>
    <!--<string name="license">-->
    <!--&lt;html&gt;-->
    <!--&lt;head&gt;&lt;/head&gt;-->
    <!--&lt;body style=&quot;text-align:justify;color:#444444;background-color: #00000000;&quot;&gt;-->
...
